# LiuSu

./: .gitignore  CMakeLists.txt  README.md
docs/: implementation-plan.md  product-requirements.md  progress-phase-2.md  progress-phase-3.md  progress-phase-4.md  progress-phase-5.md  progress-phase-6.md  progress-phase-7.md
qml/: Main.qml
qml/components/: ColorPickerDialog.qml  FilmStrip.qml  IconToolButton.qml  PageTopBar.qml  SlotItem.qml  TemplateCanvas.qml  TemplateCard.qml
qml/pages/: EditorPage.qml  ExportPage.qml  HomePage.qml  SettingsPage.qml
src/: main.cpp
src/app/: AppController.cpp  AppController.h
src/models/: ImageResource.h  ProjectState.cpp  ProjectState.h  Types.h
src/services/: AutoLayoutPolicy.cpp  AutoLayoutPolicy.h  ExportService.cpp  ExportService.h  ImageService.cpp  ImageService.h  TemplateLayout.cpp  TemplateLayout.h
src/ui/: README.md
